--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PromptDJ MIDI</title>
     <link rel="stylesheet" href="/index.css">
-  <script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.12.0",
-    "lit": "https://esm.sh/lit@^3.3.1",
-    "lit/": "https://esm.sh/lit@^3.3.1/",
-    "vite": "https://esm.sh/vite@^7.0.6"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+      {
+        "imports": {
+          "@google/genai": "https://esm.sh/@google/genai@^1.0.0",
+          "lit/": "https://esm.sh/lit@^3.3.0/",
+          "lit": "https://esm.sh/lit@^3.3.0",
+          "tone": "https://esm.sh/tone@^15.0.4"
+        }
+      }
+    </script>
+  </head>
   <body>
     <script type="module" src="/index.tsx"></script>
   </body>
